[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decolace"
dynamic = ["version"]
readme = "README.md"
description = "Python scripts to collect DeCo-LACE data using SerialEM"
authors = [{author = "Johannes Elferich", email = "jojotux123@hotmail.com"}]
license = "MIT"
repository = "https://github.com/jojoelfe/decolace"
documentation = "https://decolace.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "decolace", from = "src" },
]
dependencies = [
  "pandas",
  "typer",
]

[project.scripts]
lace_proc = "decolace.processing.cli:app"
lace_acq = "decolace.acquisition.cli:app"

[tool.hatch.version]
path = "src/decolace/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/decolace",
]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=decolace --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["decolace", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true
