[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decolace"
dynamic = ["version"]
readme = "README.md"
description = "Python scripts to collect DeCo-LACE data using SerialEM"
authors = [{author = "Johannes Elferich", email = "jojotux123@hotmail.com"}]
license = "MIT"
repository = "https://github.com/jojoelfe/decolace"
documentation = "https://decolace.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
packages = [
    { include = "decolace", from = "src" },
]
dependencies = [
  "pandas",
  "typer",
  "sqlalchemy",
]

[project.scripts]
lace_proc = "decolace.processing.cli_processing:app"
lace_acq = "decolace.acquisition.cli_acquisition:app"

[tool.hatch.version]
path = "src/decolace/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/decolace",
]

[tool.hatch.envs.default]
extra-dependencies = [
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=decolace --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["decolace", "tests"]

[tool.semantic_release]
version_variable = "src/decolace/__init__.py:__version__"
